--- a/style.css
+++ b/style.css
@@ -1,25 +1,95 @@
-:root{
+:root {
     --branco-principal: #FFFFFF;
-    --roxo-secundaria: #b60052;
-    --cor-botao: #0fa2d3;
-    --cor-fundo: #000305;
-}
-body{
-    background-color: var(--cor-fundo);
-    color:var(--branco-principal)
-}
-*{
-    margin: 0%;
-    padding: 0%;
-}
-.principal {
-    background-image: url(Background.png);
+    --cinza-secundario: #C0C0C0;
+    --botao-azul: #167BF7;
+    --cor-de-fundo: #00030C;
+    --fonte-principal: 'Inter';
+  }
+  
+  body {
+    background-color: var(--cor-de-fundo);
+    color: var(--branco-principal);
+    font-family: var(--fonte-principal);
+    font-size: 16px;
+    font-weight: 400;
+  }
+  
+  * {
+    margin: 0;
+    padding: 0;
+  }
+  
+  .principal {
+    background-image: url("img/Background.png");
     background-repeat: no-repeat;
     background-size: contain;
-}
-.img {
-    width: 30%;
-}
-.container {
-    height: 100%;
-}
+    align-items: center;
+    text-align: center;
+  }
+  
+  .container {
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 50% 50%;
+  }
+  
+  .container-botao {
+    background-color: var(--botao-azul);
+    border-radius: 5px;
+    padding: 1em;
+    color: var(--branco-principal);
+    display: block;
+    text-decoration: none;
+    margin-bottom: 1em;
+  }
+  .botao-secundario {
+    background-color: transparent;
+    border: 2px solid var(--branco-principal)
+  }
+  
+  .container-aviso {
+    font-size: 12px;
+    color: var(--cinza-secundario);
+  }
+  
+  .container-titulo {
+    font-size: 28px;
+    font-weight: 700;
+  }
+  
+  .container-imagem {
+    margin: 1em 0 2em 0;
+  }
+  
+  .container-caixa {
+    margin: 0 6em;
+  }
+  
+  .secundario-imagem {
+    width: 80%;
+  }
+  
+  .secundario {
+    align-items: center;
+    margin: 0 10em;
+  }
+  
+  .descricao-titulo {
+    font-weight: 700;
+    font-size: 48px;
+    color: var(--branco-principal);
+    margin-bottom: 0.1em;
+  }
+  
+  .descricao-texto {
+    color: var(--cinza-secundario);
+  }
+  
+  .secundario-botao {
+    display: inline-block;
+    margin-top: 1em;
+  }
+  
+  .container-descricao {
+    padding: 2em;
+  }
